# ebpf-open

./: .gitignore  Cargo.toml  LICENSE  README.md  build_android.sh  build_magisk.sh  build_musl.sh  setup_musl_sysroot.sh  setup_ndk_sysroot.sh
.cargo/: config.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/ebpf-open/: Cargo.toml
crates/ebpf-open-sys/: Cargo.toml  build.rs
crates/ebpf-open-sys/src/: lib.rs
crates/ebpf-open-sys/src/bpf/: file_monitor.bpf.c
crates/ebpf-open-sys/src/bpf/aarch64/: vmlinux_5.15.h
crates/ebpf-open-sys/src/bpf/common/: helpers.h  maps.h  misc.h  types.h  utils.h
crates/ebpf-open/src/: bpf_loader.rs  cli.rs  daemon.rs  event_handler.rs  hot_reload.rs  log.rs  main.rs
crates/intercept-config/: Cargo.toml
crates/intercept-config/src/: lib.rs
crates/res/: config.toml
magisk/: customize.sh  module.prop  service.sh
